# Rubiks-Cuber

./: CMakeLists.txt  README.md  main.cpp
CornerPatternDB/: CornerDBMaker.h  CornerPatternDB.cpp  CornerPatternDB.h  Maths.cpp  Maths.h  NibbleArray.cpp  NibbleArray.h  PatternDatabase.cpp  PatternDatabase.h  PermutationIdx.h
Models/: Baserubiks.h  RubiksCube.cpp  RubiksCube1dArray.cpp  RubiksCube3dArray.cpp  RubiksCubeBits.cpp
Models/PatternDatabase/: PatternDatabase.h
Solvers/: BFSSolver.h  DFSSolver.h  IDAstarSolver.h  IDDFSSolver.h
